--- a/ScheduleModule/Views/FreeTimeSlotView.xaml
+++ b/ScheduleModule/Views/FreeTimeSlotView.xaml
@@ -1,9 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-                    xmlns:command="http://www.galasoft.ch/mvvmlight"
-                    xmlns:registry="clr-namespace:ScheduleModule.ViewModels">
-    <DataTemplate DataType="{x:Type registry:FreeTimeSlotViewModel}">
+                    xmlns:viewModels="clr-namespace:ScheduleModule.ViewModels">
+    <DataTemplate DataType="{x:Type viewModels:FreeTimeSlotViewModel}">
         <Border HorizontalAlignment="Stretch" 
                 VerticalAlignment="Stretch"
                 Background="White"
@@ -12,9 +11,8 @@
                 x:Name="border" 
                 CornerRadius="2">
             <i:Interaction.Triggers>
-                <i:EventTrigger EventName="PreviewMouseDown">
-                    <command:EventToCommand Command="{Binding RequestAssignmentCreationCommand, Mode=OneTime}" 
-                                            PassEventArgsToCommand="True"  />
+                <i:EventTrigger EventName="MouseUp"> 
+                    <i:InvokeCommandAction Command="{Binding RequestAssignmentCreationCommand, Mode=OneTime}" />
                 </i:EventTrigger>
             </i:Interaction.Triggers>
             <Grid>
