--- a/ScheduleModule/Views/OccupiedTimeSlotView.xaml
+++ b/ScheduleModule/Views/OccupiedTimeSlotView.xaml
@@ -1,39 +1,39 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:core="clr-namespace:Core;assembly=StuffLib"
                     xmlns:system="clr-namespace:System;assembly=mscorlib"
-                    xmlns:registry="clr-namespace:ScheduleModule.ViewModels">
+                    xmlns:registry="clr-namespace:ScheduleModule.ViewModels"
+                    xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf">
     <DataTemplate DataType="{x:Type registry:OccupiedTimeSlotViewModel}">
         <DataTemplate.Resources>
-            <core:UniversalConverter x:Key="StateToBackgroundConverter">
-                <core:ConverterItem From="{x:Static registry:OccupiedTimeSlotViewModelState.Completed}">
-                  <core:ConverterItem.To>
+            <converters:Converter x:Key="StateToBackgroundConverter">
+                <converters:ConverterItem From="{x:Static registry:OccupiedTimeSlotViewModelState.Completed}">
+                  <converters:ConverterItem.To>
                         <SolidColorBrush Color="LightGreen" />
-                    </core:ConverterItem.To>
-                </core:ConverterItem>
-                <core:ConverterItem From="{x:Static registry:OccupiedTimeSlotViewModelState.Uncompleted}">
-                    <core:ConverterItem.To>
+                    </converters:ConverterItem.To>
+                </converters:ConverterItem>
+                <converters:ConverterItem From="{x:Static registry:OccupiedTimeSlotViewModelState.Uncompleted}">
+                    <converters:ConverterItem.To>
                         <SolidColorBrush Color="Khaki" />
-                    </core:ConverterItem.To>
-                </core:ConverterItem>
-                <core:ConverterItem From="{x:Static registry:OccupiedTimeSlotViewModelState.Temporary}">
-                    <core:ConverterItem.To>
+                    </converters:ConverterItem.To>
+                </converters:ConverterItem>
+                <converters:ConverterItem From="{x:Static registry:OccupiedTimeSlotViewModelState.Temporary}">
+                    <converters:ConverterItem.To>
                         <SolidColorBrush Color="Gainsboro" />
-                    </core:ConverterItem.To>
-                </core:ConverterItem>
-                <core:ConverterItem From="{x:Static registry:OccupiedTimeSlotViewModelState.IsBeingMoved}">
-                    <core:ConverterItem.To>
+                    </converters:ConverterItem.To>
+                </converters:ConverterItem>
+                <converters:ConverterItem From="{x:Static registry:OccupiedTimeSlotViewModelState.IsBeingMoved}">
+                    <converters:ConverterItem.To>
                         <SolidColorBrush Color="LightSteelBlue" />
-                    </core:ConverterItem.To>
-                </core:ConverterItem>
-            </core:UniversalConverter>
-            <core:UniversalConverter x:Key="ModeToContextMenuConverter"
+                    </converters:ConverterItem.To>
+                </converters:ConverterItem>
+            </converters:Converter>
+            <converters:Converter x:Key="ModeToContextMenuConverter"
                                      DefaultValue="{x:Null}">
-                <core:ConverterItem>
-                    <core:ConverterItem.From>
+                <converters:ConverterItem>
+                    <converters:ConverterItem.From>
                         <system:Boolean>False</system:Boolean>
-                    </core:ConverterItem.From>
-                    <core:ConverterItem.To>
+                    </converters:ConverterItem.From>
+                    <converters:ConverterItem.To>
                         <ContextMenu>
                             <MenuItem Header="{Binding CancelOrDeleteActionName}" 
                                       Command="{Binding CancelOrDeleteCommand}" />
@@ -42,9 +42,9 @@
                             <MenuItem Header="Перенести назначение"
                                       Command="{Binding MoveCommand}" />
                         </ContextMenu>
-                    </core:ConverterItem.To>
-                </core:ConverterItem>
-            </core:UniversalConverter>
+                    </converters:ConverterItem.To>
+                </converters:ConverterItem>
+            </converters:Converter>
         </DataTemplate.Resources>
         <Border BorderBrush="Gray"
                 BorderThickness="0 0.5 0 0.5"
