--- a/ScheduleModule/Views/RoomView.xaml
+++ b/ScheduleModule/Views/RoomView.xaml
@@ -1,11 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-                    xmlns:core="clr-namespace:Core;assembly=StuffLib"
-                    xmlns:main="clr-namespace:Core;assembly=MainLib"
                     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-                    xmlns:registry="clr-namespace:ScheduleModule.ViewModels">
-    <DataTemplate DataType="{x:Type registry:RoomViewModel}">
+                    xmlns:viewModels="clr-namespace:ScheduleModule.ViewModels"
+                    xmlns:misc="clr-namespace:ScheduleModule.Misc"
+                    xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf">
+    <DataTemplate DataType="{x:Type viewModels:RoomViewModel}">
         <DataTemplate.Resources>
             <Style TargetType="{x:Type ItemsControl}">
                 <Setter Property="Width"
@@ -26,16 +26,12 @@
                           Background="Gray" 
                           IsHitTestVisible="False">
                 <i:Interaction.Behaviors>
-                    <core:IgnoreMouseWheelBehavior />
+                    <behaviors:IgnoreMouseWheelBehavior />
                 </i:Interaction.Behaviors>
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <xctk:TimelinePanel BeginDate="{Binding OpenTime}"
-                                            EndDate="{Binding CloseTime}" 
-                                            Orientation="Vertical" 
-                                            OverlapBehavior="Stretch"
-                                            UnitSize="{x:Static main:Configuration.ScheduleUnitPerTimeInterval}" 
-                                            UnitTimeSpan="{x:Static main:Configuration.ScheduleUnitTimeInterval}"/>
+                                            EndDate="{Binding CloseTime}" />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemContainerStyle>
@@ -47,7 +43,7 @@
                     </Style>
                 </ItemsControl.ItemContainerStyle>
                 <ItemsControl.ItemTemplate>
-                    <DataTemplate DataType="{x:Type registry:ScheduleItemViewModel}">
+                    <DataTemplate DataType="{x:Type viewModels:ScheduleItemViewModel}">
                         <Rectangle Fill="White" />
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
@@ -55,16 +51,12 @@
             <!--Assignments layer-->
             <ItemsControl ItemsSource="{Binding TimeSlots}">
                 <i:Interaction.Behaviors>
-                    <core:IgnoreMouseWheelBehavior />
+                    <behaviors:IgnoreMouseWheelBehavior />
                 </i:Interaction.Behaviors>
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <xctk:TimelinePanel BeginDate="{Binding OpenTime}"
-                                            EndDate="{Binding CloseTime}" 
-                                            Orientation="Vertical" 
-                                            OverlapBehavior="Stretch"
-                                            UnitSize="{x:Static main:Configuration.ScheduleUnitPerTimeInterval}" 
-                                            UnitTimeSpan="{x:Static main:Configuration.ScheduleUnitTimeInterval}" />
+                                            EndDate="{Binding CloseTime}" />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemContainerStyle>
