--- a/ScheduleModule/Views/ScheduleView.xaml
+++ b/ScheduleModule/Views/ScheduleView.xaml
@@ -1,53 +1,37 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-                    xmlns:core="clr-namespace:Core;assembly=StuffLib"
-                    xmlns:main="clr-namespace:Core;assembly=MainLib"
                     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib"
-                    xmlns:registry="clr-namespace:ScheduleModule.ViewModels">
-    <DataTemplate DataType="{x:Type registry:ScheduleViewModel}">
+                    xmlns:viewModels="clr-namespace:ScheduleModule.ViewModels"
+                    xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
+                    xmlns:misc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"
+                    xmlns:markupExtensions="clr-namespace:Core.Wpf.MarkupExtensions;assembly=Core.Wpf"
+                    xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf">
+    <DataTemplate DataType="{x:Type viewModels:ScheduleViewModel}">
         <DataTemplate.Resources>
             <ControlTemplate x:Key="ListBoxItem" 
                              TargetType="{x:Type ListBoxItem}">
                 <ContentPresenter />
             </ControlTemplate>
             <xctk:InverseBoolConverter x:Key="InverseBoolConverter" />
-            <core:UniversalConverter x:Key="BooleanToInversedVisibilityConverter"
+            <converters:Converter x:Key="BooleanToInversedVisibilityConverter"
                                      DefaultValue="{x:Static Visibility.Visible}">
-                <core:ConverterItem To="{x:Static Visibility.Collapsed}">
-                    <core:ConverterItem.From>
-                        <system:Boolean>True</system:Boolean>
-                    </core:ConverterItem.From>
-                </core:ConverterItem>
-            </core:UniversalConverter>
-            <core:UniversalConverter x:Key="BooleanToHiddenVisibilityConverter"
-                                     DefaultValue="{x:Static Visibility.Visible}">
-                <core:ConverterItem To="{x:Static Visibility.Hidden}">
-                    <core:ConverterItem.From>
-                        <system:Boolean>True</system:Boolean>
-                    </core:ConverterItem.From>
-                </core:ConverterItem>
-            </core:UniversalConverter>
-            <core:UniversalConverter x:Key="ModeToButtonTextConverter" 
+                <converters:ConverterItem From="{x:Static misc:StaticBoolean.True}"
+                                          To="{x:Static Visibility.Collapsed}">
+                </converters:ConverterItem>
+            </converters:Converter>
+            <converters:Converter x:Key="ModeToButtonTextConverter" 
                                      DefaultValue="Перейти в режим просмотра">
-                <core:ConverterItem To="Перейти в режим назначений">
-                    <core:ConverterItem.From>
-                        <system:Boolean>True</system:Boolean>
-                    </core:ConverterItem.From>
-                </core:ConverterItem>
-            </core:UniversalConverter>
-            <core:UniversalConverter x:Key="ModeToDateSelectorTextConverter" 
+                <converters:ConverterItem From="{x:Static misc:StaticBoolean.True}"
+                                          To="Перейти в режим назначений" />
+            </converters:Converter>
+            <converters:Converter x:Key="ModeToDateSelectorTextConverter" 
                                      DefaultValue="Выберите день назначения">
-                <core:ConverterItem To="Расписание работы кабинетов на">
-                    <core:ConverterItem.From>
-                        <system:Boolean>True</system:Boolean>
-                    </core:ConverterItem.From>
-                </core:ConverterItem>
-            </core:UniversalConverter>
+                <converters:ConverterItem From="{x:Static misc:StaticBoolean.True}"
+                                          To="Расписание работы кабинетов на" />
+            </converters:Converter>
         </DataTemplate.Resources>
-        <xctk:BusyIndicator IsBusy="{Binding IsBusy}" 
-                            BusyContent="{Binding BusyStatus}">
+        <Grid>
             <DockPanel LastChildFill="True">
                 <!--Schedule filters-->
                 <DockPanel DockPanel.Dock="Top"
@@ -59,7 +43,7 @@
                             Background="White"
                             Content="{Binding IsInReadOnlyMode, Converter={StaticResource ModeToButtonTextConverter}}"
                             Command="{Binding ChangeModeCommand}"
-                            Visibility="{Binding IsMovingAssignment, Converter={StaticResource BooleanToHiddenVisibilityConverter}}" />
+                            Visibility="{Binding IsMovingAssignment, Converter={x:Static converters:BoolToInvisibilityConverter.Instance}}" />
                     <TextBlock DockPanel.Dock="Left"
                                Text="{Binding IsInReadOnlyMode, Converter={StaticResource ModeToDateSelectorTextConverter}}" 
                                MinWidth="190" 
@@ -72,14 +56,14 @@
                             Content="&lt;&lt;"
                             DockPanel.Dock="Left"
                             Command="{Binding ChangeDateCommand, Mode=OneTime}" 
-                            CommandParameter="{core:Convert -7, {x:Type system:Int32}}"/>
+                            CommandParameter="{markupExtensions:Int32 -7}"/>
                     <Button Margin="3 5 3 5"
                             Padding="5"
                             VerticalAlignment="Center"
                             Content="&lt;"
                             DockPanel.Dock="Left"
                             Command="{Binding ChangeDateCommand, Mode=OneTime}" 
-                            CommandParameter="{core:Convert -1, {x:Type system:Int32}}"/>
+                            CommandParameter="{markupExtensions:Int32 -1}"/>
                     <DatePicker DockPanel.Dock="Left" 
                                 SelectedDateFormat="Long" 
                                 Width="130" 
@@ -94,20 +78,14 @@
                             Content="&gt;"
                             DockPanel.Dock="Left"
                             Command="{Binding ChangeDateCommand, Mode=OneTime}" 
-                            CommandParameter="{core:Convert 1, {x:Type system:Int32}}"/>
+                            CommandParameter="{markupExtensions:Int32 1}"/>
                     <Button Margin="3 5 5 5"
                             Padding="5"
                             VerticalAlignment="Center"
                             Content="&gt;&gt;"
                             DockPanel.Dock="Left"
                             Command="{Binding ChangeDateCommand, Mode=OneTime}" 
-                            CommandParameter="{core:Convert 7, {x:Type system:Int32}}"/>
-                    <Button DockPanel.Dock="Right" 
-                            Width="170" 
-                            Margin="5" 
-                            Padding="5" 
-                            Content="Редактировать расписание" 
-                            Command="{Binding OpenScheduleEditorCommand, Mode=OneTime}" />
+                            CommandParameter="{markupExtensions:Int32 7}"/>
                     <StackPanel Orientation="Horizontal"
                                 Visibility="{Binding IsInReadOnlyMode, Converter={StaticResource BooleanToInversedVisibilityConverter}}">
                         <Grid Width="180" 
@@ -146,9 +124,8 @@
                                 Margin="5" 
                                 Padding="5" 
                                 Background="White" 
-                                Visibility="{Binding IsMovingAssignment, Converter={StaticResource BooleanToVisibilityConverter}}"
+                                Visibility="{Binding IsMovingAssignment, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"
                                 Command="{Binding CancelAssignmentMovementCommand, Mode=OneTime}"/>
-
                     </StackPanel>
                 </DockPanel>
                 <Grid HorizontalAlignment="Stretch" 
@@ -167,7 +144,7 @@
                               VerticalAlignment="Top" 
                               Width="195" 
                               Margin="5 0 0 0"
-                              Visibility="{Binding OverlayAssignmentCollectionViewModel.CanShowCurrentPatientAssignments, Converter={StaticResource BooleanToVisibilityConverter}}"
+                              Visibility="{Binding OverlayAssignmentCollectionViewModel.CanShowCurrentPatientAssignments, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"
                               IsChecked="{Binding OverlayAssignmentCollectionViewModel.ShowCurrentPatientAssignments, UpdateSourceTrigger=PropertyChanged}" 
                               HorizontalContentAlignment="Stretch">
                         <TextBlock Text="Отображать назначения выбранного пациента" 
@@ -181,13 +158,13 @@
                                FontStyle="Italic"
                                Margin="25 0 0 0" 
                                FontWeight="SemiBold" 
-                               Visibility="{Binding OverlayAssignmentCollectionViewModel.ShowThatCurrentPatientHasNoAssignments, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                               Visibility="{Binding OverlayAssignmentCollectionViewModel.ShowThatCurrentPatientHasNoAssignments, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"/>
                     <!--Time tickers-->
                     <ScrollViewer Grid.Row="1"
                                   Grid.Column="0" 
                                   HorizontalScrollBarVisibility="Disabled" 
                                   VerticalScrollBarVisibility="Hidden"
-                                  core:ScrollSynchronizer.VerticalScrollGroup="ScheduleVerticalScroll">
+                                  behaviors:ScrollSynchronizer.VerticalScrollGroup="ScheduleVerticalScroll">
                         <Grid>
                             <ListBox IsHitTestVisible="False"
                                      ItemsSource="{Binding TimeTickers}" 
@@ -199,11 +176,7 @@
                                 <ListBox.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <xctk:TimelinePanel BeginDate="{Binding OpenTime}" 
-                                                            EndDate="{Binding CloseTime}" 
-                                                            Orientation="Vertical" 
-                                                            OverlapBehavior="Stretch"
-                                                            UnitSize="{x:Static main:Configuration.ScheduleUnitPerTimeInterval}"
-                                                            UnitTimeSpan="{x:Static main:Configuration.ScheduleUnitTimeInterval}"/>
+                                                            EndDate="{Binding CloseTime}" />
                                     </ItemsPanelTemplate>
                                 </ListBox.ItemsPanel>
                                 <ListBox.ItemContainerStyle>
@@ -226,7 +199,7 @@
                                   Grid.Column="1" 
                                   VerticalScrollBarVisibility="Disabled" 
                                   HorizontalScrollBarVisibility="Hidden" 
-                                  core:ScrollSynchronizer.HorizontalScrollGroup="ScheduleHorizontalScroll">
+                                  behaviors:ScrollSynchronizer.HorizontalScrollGroup="ScheduleHorizontalScroll">
                         <StackPanel Orientation="Horizontal">
                             <ItemsControl  ItemsSource="{Binding FilteredRooms}" 
                                            IsEnabled="False"
@@ -237,7 +210,7 @@
                                     </ItemsPanelTemplate>
                                 </ItemsControl.ItemsPanel>
                                 <ItemsControl.ItemTemplate>
-                                    <DataTemplate DataType="{x:Type registry:RoomViewModel}">
+                                    <DataTemplate DataType="{x:Type viewModels:RoomViewModel}">
                                         <Grid>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="200" />
@@ -270,11 +243,11 @@
                           Grid.Column="1" >
                         <ScrollViewer VerticalScrollBarVisibility="Auto" 
                                       HorizontalScrollBarVisibility="Auto"
-                                      core:ScrollSynchronizer.HorizontalScrollGroup="ScheduleHorizontalScroll"
-                                      core:ScrollSynchronizer.VerticalScrollGroup="ScheduleVerticalScroll">
+                                      behaviors:ScrollSynchronizer.HorizontalScrollGroup="ScheduleHorizontalScroll"
+                                      behaviors:ScrollSynchronizer.VerticalScrollGroup="ScheduleVerticalScroll">
                             <ItemsControl ItemsSource="{Binding FilteredRooms}">
                                 <i:Interaction.Behaviors>
-                                    <core:IgnoreMouseWheelBehavior />
+                                    <behaviors:IgnoreMouseWheelBehavior />
                                 </i:Interaction.Behaviors>
                                 <ItemsControl.ItemsPanel>
                                     <ItemsPanelTemplate>
@@ -283,7 +256,7 @@
                                 </ItemsControl.ItemsPanel>
                             </ItemsControl>
                         </ScrollViewer>
-                        <TextBlock Visibility="{Binding NoRoomIsFound, Converter={StaticResource BooleanToVisibilityConverter}}" 
+                        <TextBlock Visibility="{Binding NoRoomIsFound, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}" 
                                    FontWeight="Bold" 
                                    FontSize="16" 
                                    IsHitTestVisible="False"
@@ -297,7 +270,13 @@
                     </Grid>
                 </Grid>
             </DockPanel>
-        </xctk:BusyIndicator>
+            <ContentControl Content="{Binding BusyMediator}"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch" />
+            <ContentControl Content="{Binding FailureMediator}"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch" />
+        </Grid>
         <DataTemplate.Triggers>
             <DataTrigger Binding="{Binding SelectedRoom}" 
                          Value="{x:Null}">
