--- a/OrganizationContracts/Views/RecordDocumentsView.xaml
+++ b/OrganizationContracts/Views/RecordDocumentsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="OrganizationContractsModule.Views.RecordDocsView"
+﻿<UserControl x:Class="OrganizationContractsModule.Views.RecordDocumentsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,11 +7,19 @@
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
              xmlns:viewModels="clr-namespace:OrganizationContractsModule.ViewModels"
              xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
+             xmlns:prism="http://www.codeplex.com/prism"
+             xmlns:popup="clr-namespace:Core.Wpf.PopupWindowActionAware;assembly=Core.Wpf"
              mc:Ignorable="d" 
              d:DesignHeight="80" d:DesignWidth="400"
              d:DataContext="{d:DesignInstance viewModels:RecordDocumentsCollectionViewModel}">
     
     <UserControl.Resources>
+        <DataTemplate x:Key="ConfirmationWindowTemplate">
+            <Grid MinWidth="200" MinHeight="100">
+                <TextBlock TextWrapping="Wrap" Grid.Row="0" Text="{Binding}"/>
+            </Grid>
+        </DataTemplate>
+        
         <ItemsPanelTemplate x:Key="docsTemplate">
             <VirtualizingStackPanel IsItemsHost="True" Orientation="Horizontal"/>
         </ItemsPanelTemplate>
@@ -85,12 +93,19 @@
         </Style>
     </UserControl.Resources>
 
+    <i:Interaction.Triggers>
+        <prism:InteractionRequestTrigger SourceObject="{Binding ConfirmationInteractionRequest, Mode=OneWay}">
+            <popup:PopupWindowAction IsModal="True"
+                                     ContentTemplate="{StaticResource ConfirmationWindowTemplate}"/>
+        </prism:InteractionRequestTrigger>        
+    </i:Interaction.Triggers>
+    
     <DockPanel LastChildFill="True">
         <ListBox x:Name="docs" 
                  Margin="0" Background="{x:Null}" 
                  BorderThickness="1" BorderBrush="Black"
                  ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                 Visibility="{Binding HasDocuments, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"
+                 Visibility="{Binding HasAttachments, Converter={x:Static converters:BoolToVisibilityConverter.Instance}}"
                  ItemsPanel="{DynamicResource docsTemplate}"                 
                  ItemContainerStyle="{DynamicResource ListBoxItemStyle}"
                  ItemsSource="{Binding RecordDocuments}">            
