--- a/ScheduleModule/Views/HeaderView.xaml
+++ b/ScheduleModule/Views/HeaderView.xaml
@@ -4,21 +4,61 @@
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:fluent="urn:fluent-ribbon"
+                      xmlns:viewModels="clr-namespace:ScheduleModule.ViewModels"
+                      xmlns:markupExtensions="clr-namespace:Core.Wpf.MarkupExtensions;assembly=Core.Wpf"
                       mc:Ignorable="d"
                       d:DesignHeight="300"
                       d:DesignWidth="300"
+                      d:DataContext="{d:DesignInstance viewModels:HeaderViewModel}"
                       Header="Расписание">
+    <fluent:RibbonGroupBox Header="Дата">
+        <fluent:Button Size="Large"
+                       LargeIcon="pack://application:,,,/ScheduleModule;Component/Resources/Images/PreviousWeek48x48.png"
+                       ToolTip="Предыдущая неделя"
+                       Header="&lt;&lt;"
+                       Command="{Binding ContentViewModel.ChangeDateCommand, Mode=OneTime}"
+                       CommandParameter="{markupExtensions:Int32 -7}" />
+        <fluent:Button Size="Large"
+                       LargeIcon="pack://application:,,,/ScheduleModule;Component/Resources/Images/PreviousDay48x48.png"
+                       ToolTip="Предыдущий день"
+                       Header="&lt;"
+                       Command="{Binding ContentViewModel.ChangeDateCommand, Mode=OneTime}"
+                       CommandParameter="{markupExtensions:Int32 -1}" />
+        <StackPanel Orientation="Vertical">
+            <DatePicker VerticalAlignment="Center"
+                        SelectedDate="{Binding ContentViewModel.SelectedDate, UpdateSourceTrigger=PropertyChanged}" />
+            <fluent:Button Size="Middle"
+                           Icon="pack://application:,,,/ScheduleModule;Component/Resources/Images/PreviousDay48x48.png"
+                           Header="Сегодня"
+                           HorizontalAlignment="Center"
+                           Command="{Binding ContentViewModel.ChangeDateCommand, Mode=OneTime}"
+                           CommandParameter="{x:Null}" />
+        </StackPanel>
+        <fluent:Button Size="Large"
+                       LargeIcon="pack://application:,,,/ScheduleModule;Component/Resources/Images/NextDay48x48.png"
+                       ToolTip="Следующий день"
+                       Header="&gt;"
+                       Command="{Binding ContentViewModel.ChangeDateCommand, Mode=OneTime}"
+                       CommandParameter="{markupExtensions:Int32 1}" />
+        <fluent:Button Size="Large"
+                       LargeIcon="pack://application:,,,/ScheduleModule;Component/Resources/Images/NextWeek48x48.png"
+                       ToolTip="Следующая неделя"
+                       Header="&gt;&gt;"
+                       Command="{Binding ContentViewModel.ChangeDateCommand, Mode=OneTime}"
+                       CommandParameter="{markupExtensions:Int32 7}" />
+    </fluent:RibbonGroupBox>
     <fluent:RibbonGroupBox Header="Режим">
         <fluent:Button SizeDefinition="Large"
                        Header="Назначения" />
     </fluent:RibbonGroupBox>
     <fluent:RibbonGroupBox Header="Фильтры">
-        <fluent:TextBox Header="Дата"
-                        SizeDefinition="Medium"
-                        Text="Date placeholder" />
         <fluent:ComboBox Header="Кабинет"
-                         SizeDefinition="Medium" />
+                         IsEditable="False"
+                         InputWidth="120"
+                         Width="200" />
         <fluent:ComboBox Header="Тип услуг"
-                         SizeDefinition="Medium" />
+                         IsEditable="False"
+                         InputWidth="120"
+                         Width="200" />
     </fluent:RibbonGroupBox>
 </fluent:RibbonTabItem>
