--- a/Shell/App.xaml
+++ b/Shell/App.xaml
@@ -44,7 +44,7 @@
                 <Setter Property="Height"
                         Value="23" />
                 <Setter Property="Padding"
-                        Value="2 1 2 1" />
+                        Value="0" />
                 <Setter Property="Margin"
                         Value="3" />
             </Style>
