Finished moving schedule in original form

--- a/ScheduleModule/Themes/Generic.xaml
+++ b/ScheduleModule/Themes/Generic.xaml
@@ -8,6 +8,7 @@
         <ResourceDictionary Source="../Views/OccupiedTimeSlotView.xaml" />
         <ResourceDictionary Source="../Views/RoomView.xaml" />
         <ResourceDictionary Source="../Views/TimeTickerView.xaml" />
+        <ResourceDictionary Source="../Views/ScheduleAssignmentUpdateView.xaml" />
     </ResourceDictionary.MergedDictionaries>
     <Style TargetType="{x:Type xctk:TimelinePanel}">
         <Setter Property="UnitSize"
