--- a/ScheduleModule/Views/HeaderView.xaml
+++ b/ScheduleModule/Views/HeaderView.xaml
@@ -6,18 +6,36 @@
                       xmlns:fluent="urn:fluent-ribbon"
                       xmlns:viewModels="clr-namespace:ScheduleModule.ViewModels"
                       xmlns:markupExtensions="clr-namespace:Core.Wpf.MarkupExtensions;assembly=Core.Wpf"
+                      xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
+                      xmlns:misc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"
                       mc:Ignorable="d"
                       d:DesignHeight="300"
                       d:DesignWidth="300"
                       d:DataContext="{d:DesignInstance viewModels:HeaderViewModel}"
                       Header="Расписание">
+    <fluent:RibbonTabItem.Resources>
+        <converters:Converter x:Key="ModeToTextConverter">
+            <converters:ConverterItem From="{x:Static misc:StaticBoolean.True}"
+                                      To="Назначение" />
+            <converters:ConverterItem From="{x:Static misc:StaticBoolean.False}"
+                                      To="Просмотр" />
+        </converters:Converter>
+        <converters:Converter x:Key="ModeToIconConverter">
+            <converters:ConverterItem From="{x:Static misc:StaticBoolean.True}"
+                                      To="pack://application:,,,/ScheduleModule;Component/Resources/Images/EditSchedule48x48.png" />
+            <converters:ConverterItem From="{x:Static misc:StaticBoolean.False}"
+                                      To="pack://application:,,,/ScheduleModule;Component/Resources/Images/ViewSchedule48x48.png" />
+        </converters:Converter>
+
+    </fluent:RibbonTabItem.Resources>
     <fluent:RibbonGroupBox Header="Дата">
         <fluent:Button Size="Large"
                        LargeIcon="pack://application:,,,/ScheduleModule;Component/Resources/Images/PreviousWeek48x48.png"
                        ToolTip="Предыдущая неделя"
                        Header="&lt;&lt;"
                        Command="{Binding ContentViewModel.ChangeDateCommand, Mode=OneTime}"
-                       CommandParameter="{markupExtensions:Int32 -7}" />
+                       CommandParameter="{markupExtensions:Int32 -7}">
+        </fluent:Button>
         <fluent:Button Size="Large"
                        LargeIcon="pack://application:,,,/ScheduleModule;Component/Resources/Images/PreviousDay48x48.png"
                        ToolTip="Предыдущий день"
@@ -28,7 +46,7 @@
             <DatePicker VerticalAlignment="Center"
                         SelectedDate="{Binding ContentViewModel.SelectedDate, UpdateSourceTrigger=PropertyChanged}" />
             <fluent:Button Size="Middle"
-                           Icon="pack://application:,,,/ScheduleModule;Component/Resources/Images/PreviousDay48x48.png"
+                           Icon="pack://application:,,,/ScheduleModule;Component/Resources/Images/Today48x48.png"
                            Header="Сегодня"
                            HorizontalAlignment="Center"
                            Command="{Binding ContentViewModel.ChangeDateCommand, Mode=OneTime}"
@@ -49,16 +67,22 @@
     </fluent:RibbonGroupBox>
     <fluent:RibbonGroupBox Header="Режим">
         <fluent:Button SizeDefinition="Large"
-                       Header="Назначения" />
+                       Header="{Binding ContentViewModel.IsInAssignmentMode, Converter={StaticResource ModeToTextConverter}}" 
+                       LargeIcon="{Binding ContentViewModel.IsInAssignmentMode, Converter={StaticResource ModeToIconConverter}}"
+                       Command="{Binding ContentViewModel.ChangeModeCommand}"/>
     </fluent:RibbonGroupBox>
     <fluent:RibbonGroupBox Header="Фильтры">
-        <fluent:ComboBox Header="Кабинет"
-                         IsEditable="False"
-                         InputWidth="120"
-                         Width="200" />
         <fluent:ComboBox Header="Тип услуг"
                          IsEditable="False"
-                         InputWidth="120"
-                         Width="200" />
+                         InputWidth="300"
+                         ItemsSource="{Binding ContentViewModel.RecordTypes}"
+                         SelectedItem="{Binding ContentViewModel.SelectedRecordType}"
+                         DisplayMemberPath="Name"/>
+        <fluent:ComboBox Header="Кабинет"
+                         IsEditable="False"
+                         InputWidth="300"
+                         ItemsSource="{Binding ContentViewModel.Rooms}"
+                         SelectedItem="{Binding ContentViewModel.SelectedRoom}"
+                         DisplayMemberPath="NumberAndName"/>
     </fluent:RibbonGroupBox>
 </fluent:RibbonTabItem>
